deploy/examples/kubernetes/travel-agency/kogito-travels-ingress.yaml
# Ref.: https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/#create-an-ingress-resource
# don't forget to edit your /etc/hosts file!!
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: kogito-travels-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: travels.kogito
      http:
        paths:
          - path: /
            backend:
              serviceName: kogito-travels
              servicePort: 8080
